Update to latest OCGCore Implemented a test config for my test server

--- a/config/configs.json
+++ b/config/configs.json
@@ -41,6 +41,13 @@
 		}
 	],
 	"servers": [
+		{
+			"name": "Test",
+			"address": "172.18.57.133",
+			"duelport": 7911,
+			"roomaddress": "172.18.57.133",
+			"roomlistport": 7922
+		}
 	],
 	"posixPathExtension": "/usr/local/bin:/Library/Frameworks/Mono.framework/Versions/Current/Commands"
 }
