--- a/config/system.conf
+++ b/config/system.conf
@@ -1,6 +1,6 @@
 # Project Ignis: EDOPro system.conf
 # Overwritten on normal game exit
-use_d3d = 1
+driver_type = default
 vsync = 1
 maxFPS = 60
 fullscreen = 0
@@ -8,14 +8,14 @@ showConsole = 0
 windowStruct = 
 antialias = 2
 coreLogOutput = 3
-nickname = Player
+nickname = 1SDAN
 gamename = I:P
-lastdeck = Starter Deck - 2019
-lastlflist = 0
-lastallowedcards = 3
-lastDuelParam = 190464
+lastdeck = Clown Control
+lastlflist = 2113728106
+lastallowedcards = 2
+lastDuelParam = 853504
 lastExtraRules = 0
-lastDuelForbidden = 0
+lastDuelForbidden = 83886080
 timeLimit = 180
 team1count = 1
 team2count = 1
@@ -35,7 +35,7 @@ lastport = 7911
 botThrowRock = 0
 botMute = 0
 lastBot = 0
-lastServer = EU Central (Competitive)
+lastServer = Test
 game_version = 0
 automonsterpos = 1
 autospellpos = 1
@@ -71,3 +71,4 @@ loopMusic = 1
 saveHandTest = 1
 discordIntegration = 1
 noClientUpdates = 0
+logDownloadErrors = 0
