Labyrinth of Nightmare

--- a/config/strings.conf
+++ b/config/strings.conf
@@ -786,7 +786,7 @@ any line that doesn't start with the above keywords is ignored
 !victory 0x12 Victory by the effect of Vennominaga
 !victory 0x13 Victory by the effect of Horakhty
 !victory 0x14 Victory by the effect of Exodius
-!victory 0x15 Victory by the effect of Destiny Board
+!victory 0x15 Victory by the effect of Ouija Board
 !victory 0x16 Victory by the effect of Last Turn
 !victory 0x17 Victory by the effect of Number 88: Gimmick Puppet of Leo
 !victory 0x18 Victory by the effect of Number C88: Gimmick Puppet Disaster Leo
@@ -979,7 +979,7 @@ any line that doesn't start with the above keywords is ignored
 !setname 0x1a Dark Scorpion
 !setname 0x1b Phantom Beast
 !setname 0x101b Mecha Phantom Beast
-!setname 0x1c Spirit Message
+!setname 0x1c Death Message
 !setname 0x1d Koa'ki Meiru
 !setname 0x1e Chrysalis
 !setname 0x1f Neo-Spacian
