--- a/config/strings.conf
+++ b/config/strings.conf
@@ -1292,7 +1292,7 @@ any line that doesn't start with the above keywords is ignored
 !setname 0x107 F.A.
 !setname 0x108 Magical Musket
 !setname 0x109 The Weather
-!setname 0x10a Parshath
+!setname 0x10a Perseus
 !setname 0x10b Tindangle
 !setname 0x10c Mekk-Knight
 !setname 0x10d Mythical Beast
