Champion of Black Magic

--- a/config/strings.conf
+++ b/config/strings.conf
@@ -1084,7 +1084,7 @@ any line that doesn't start with the above keywords is ignored
 !setname 0x6d Djinn
 !setname 0x106d Djinn of Rituals
 !setname 0x6e Magical
-!setname 0x106e Spellbook
+!setname 0x106e Magical Spellbook
 !setname 0x6f Heroic
 !setname 0x106f Heroic Challenger
 !setname 0x206f Heroic Champion
