--- a/config/strings.conf
+++ b/config/strings.conf
@@ -808,6 +808,7 @@ any line that doesn't start with the above keywords is ignored
 !victory 0x56 Victory by the rules of Deck Masters
 !victory 0x57 Victory by the effect of Draw of Fate
 !victory 0x21 Victory by the effect of True Exodia
+!victory 0xf0 Victory by the effect of 「%ls」
 #Counters from Official cards
 !counter 0x1 Spell Counter
 !counter 0x1002 Wedge Counter
