Reverted 30 min Deck Size Cybernetic Revolution and Elemental Energy

--- a/config/strings.conf
+++ b/config/strings.conf
@@ -851,7 +851,7 @@ any line that doesn't start with the above keywords is ignored
 !counter 0x25 Chronicle Counter
 !counter 0x26 Counter(Metal Shooter)
 !counter 0x27 Counter(Des Mosquito)
-!counter 0x28 Counter(Dark Catapulter)
+!counter 0x28 Catapult Counter
 !counter 0x29 Inflation Counter
 !counter 0x102a Gardna Counter
 !counter 0x2c You Got It Boss! Counter
@@ -1285,7 +1285,7 @@ any line that doesn't start with the above keywords is ignored
 !setname 0xfd World Chalice
 !setname 0xfe World Legacy
 !setname 0xff Clear Wing
-!setname 0x100 Bonding -
+!setname 0x100 Covalent Bonding
 !setname 0x101 Code Talker
 !setname 0x102 Rokket
 !setname 0x103 Altergeist
@@ -1367,11 +1367,11 @@ any line that doesn't start with the above keywords is ignored
 !setname 0x14b Numeron
 !setname 0x114b Numeron Gate
 !setname 0x14c Fossil
-!setname 0x14d Spiritual Art
-!setname 0x314d Spiritual Earth Art
-!setname 0x514d Spiritual Fire Art
-!setname 0x614d Spiritual Water Art
-!setname 0xa14d Spiritual Wind Art
+!setname 0x14d Spirit Art
+!setname 0x314d Earth Spirit Art
+!setname 0x514d Fire Spirit Art
+!setname 0x614d Water Spirit Art
+!setname 0xa14d Wind Spirit Art
 !setname 0x14e Dual Avatar
 !setname 0x14f Tri-Brigade
 !setname 0x150 Virtual World
