Shadow of Infinity

--- a/config/strings.conf
+++ b/config/strings.conf
@@ -1410,6 +1410,8 @@ any line that doesn't start with the above keywords is ignored
 !setname 0x300 Monk
 !setname 0x301 Superarmor
 !setname 0x302 Millennium
+!setname 0x303 Armageddon
+!setname 0x304 Oblivion
 #Anime Archetypes
 !setname 0x2033 Blackwing Tamer
 !setname 0x5034 Advanced Crystal Beast
