--- a/config/strings.conf
+++ b/config/strings.conf
@@ -831,7 +831,7 @@ any line that doesn't start with the above keywords is ignored
 !counter 0x11 Hyper Venom Counter
 !counter 0x12 Karakuri Counter
 !counter 0x13 Chaos Counter
-!counter 0x14 Counter(Miracle Jurassic Egg)
+!counter 0x14 Egg Counter
 !counter 0x1015 Ice Counter
 !counter 0x16 Spellstone Counter
 !counter 0x17 Nut Counter
@@ -985,7 +985,7 @@ any line that doesn't start with the above keywords is ignored
 !setname 0x1c Death Message
 !setname 0x1d Koa'ki Meiru
 !setname 0x1e Chrysalis
-!setname 0x1f Neo-Spacian
+!setname 0x1f Neospacian
 !setname 0x20 Shien
 !setname 0x21 Earthbound Immortal
 !setname 0x22 Jurrac
