--- a/config/strings.conf
+++ b/config/strings.conf
@@ -1412,6 +1412,7 @@ any line that doesn't start with the above keywords is ignored
 !setname 0x302 Millennium
 !setname 0x303 Armageddon
 !setname 0x304 Oblivion
+!setname 0x305 Orichalcos
 #Anime Archetypes
 !setname 0x2033 Blackwing Tamer
 !setname 0x5034 Advanced Crystal Beast
