Force of the Breaker

--- a/config/strings.conf
+++ b/config/strings.conf
@@ -1008,9 +1008,9 @@ any line that doesn't start with the above keywords is ignored
 !setname 0x32 Volcanic
 !setname 0x33 Blackwing
 !setname 0x1033 Assault Blackwing
-!setname 0x34 Crystal
-!setname 0x1034 Crystal Beast
-!setname 0x2034 Ultimate Crystal
+!setname 0x34 Gem-
+!setname 0x1034 Gem-Beast
+!setname 0x2034 Gem-God
 !setname 0x35 Fabled
 !setname 0x36 Machina
 !setname 0x37 Mist Valley
@@ -1195,7 +1195,7 @@ any line that doesn't start with the above keywords is ignored
 !setname 0x10b7 Outer Entity
 !setname 0x20b7 Elder Entity
 !setname 0x40b7 Old Entity
-!setname 0xb9 Blaze Accelerator
+!setname 0xb9 Blaze Cannon
 !setname 0xba Raidraptor
 !setname 0xbb Infernoid
 !setname 0xbc Jinzo
@@ -1415,7 +1415,7 @@ any line that doesn't start with the above keywords is ignored
 !setname 0x305 Orichalcos
 #Anime Archetypes
 !setname 0x2033 Blackwing Tamer
-!setname 0x5034 Advanced Crystal Beast
+!setname 0x5034 Advanced Gem-Beast
 !setname 0x2048 Number S
 !setname 0x209b Melodious Songstress
 !setname 0x10e3 Cubic Seed
